# okapi

./: .ghcid  .gitignore  ChangeLog.md  HSP.md  Main.hs  NewDesign.md  README.md  api.html  cabal.project  how-to-run-realworld-test.txt  init.sql  new.cabal  okapi-talk.html  okapi.cabal  package.yaml  release.md  spec.json  stack.yaml  todo.db
app/: Main.hs
docs/: .gitignore  CHANGELOG.md  README.md  docs.cabal  index.md  next.config.js  package-lock.json  package.json  tailwind.config.js
docs/markdoc/: tags.js
docs/pages/: index.html  style.css  syntax.css
docs/src/: Lib.hs
examples/calc/: Main.hs
examples/calc-ap/: Main.hs
examples/calc-comp/: Main.hs
examples/calc-fish/: Main.hs
examples/calc-no-do/: Main.hs
examples/calculator/: Main.hs
examples/calculator-route/: Main.hs
examples/calculator2/: Main.hs
examples/car-dealership/: Main.hs
examples/chess/: Chess.hs  Main.hs
examples/contacts/: Main.hs
examples/dotodo/: Main.hs
examples/elm/: Main.hs
examples/hsp-test/: Main.hs
examples/realworld/: Main.hs
examples/realworld-htmx/: Controller.hs  Main.hs  Model.hs  View.hs  some.html
examples/recipe/: Main.hs
examples/servant/: Main.hs  OkapiAPI.hs  ServantAPI.hs  Template.hs
examples/sse/: Main.hs  sse.html
examples/static/: Main.hs
examples/todo/: Main.hs
examples/todo-full-route/: Main.hs
examples/todo-htmx/: Main.hs
examples/todo-route/: Main.hs
examples/todo2/: Main.hs
examples/todo3/: Main.hs
examples/twitter-clone/: Main.hs
experimental/: Application.hs  Event.hs  Match.hs  Middleware.hs  Operator.hs  Parser.hs  Pattern.hs  Pattern12.hs  Pattern2.hs  Patterns.hs  QuasiTest.hs  Response.hs  Route.hs  Spec.hs  Test.hs  Types.hs  onpatterns.md
experimental/Effect/: Failure.hs  HTTP.hs  Request.hs
experimental/Middleware/: CSRF.hs  Caching.hs  Session.hs
experimental/Style/: Sinatra.hs
experimental/Type/: Failure.hs  HTTP.hs  Request.hs  Response.hs
experimental/chess/: Main.hs
hsp/greeting/: [age].hsp
lib/: HSP.md  NewDesign.md  README.md  genopenapi.yml  okapi.cabal  realworld.db  release.md  test.db
lib/examples/bookstore/: Main.hs
lib/examples/calculator/: Main.hs
lib/examples/hello-world/: Main.hs
lib/examples/tick/: Main.hs
lib/realworld/: API.hs  App.hs  Data.hs  Database.hs  JWT.hs  Main.hs  Resource.hs  Route.hs
lib/realworld/API/: AddComment.hs  Authentication.hs  CreateArticle.hs  DeleteArticle.hs  DeleteComment.hs  FavoriteArticle.hs  FeedArticles.hs  FollowUser.hs  GetArticle.hs  GetComments.hs  GetCurrentUser.hs  GetProfile.hs  GetTags.hs  ListArticles.hs  Login.hs  Registration.hs  UnFavoriteArticle.hs  UnFollowUser.hs  UpdateArticle.hs  UpdateUser.hs
lib/realworld/Plan/: AddComment.hs  Authentication.hs  CreateArticle.hs  DeleteArticle.hs  DeleteComment.hs  FavoriteArticle.hs  FeedArticles.hs  FollowUser.hs  GetArticle.hs  GetComments.hs  GetCurrentUser.hs  GetProfile.hs  GetTags.hs  ListArticles.hs  Registration.hs  UnFavoriteArticle.hs  UnFollowUser.hs  UpdateArticle.hs  UpdateUser.hs
lib/src/: Example.hs  Okapi.hs  Tree.hs
lib/src/Example/: Bookstore.hs  Calculator.hs
lib/src/Okapi/: API.hs  App.hs  App2.hs  Body.hs  Codec.hs  DSL.hs  Data.hs  Endpoint.hs  Executable.hs  Headers.hs  Key.hs  Kind.hs  Matchpoint.hs  Middleware.hs  Mode.hs  NewDSL.hs  OpenApi.hs  Operation.hs  P.hs  Parser.hs  Pattern.hs  Phantom.hs  Plug.hs  Q.hs  Query.hs  Req.hs  Request.hs  Res.hs  ResAlt.hs  Response.hs  Route.hs  Script.hs  Secret.hs  Server.hs  Spec.hs  Tree.hs  Type.hs  TypedAPI.hs
lib/src/Okapi/DSL/: Alternative.hs  Applicative.hs
lib/src/Okapi/Parser/: Body.hs  Form.hs  Headers.hs  Path.hs  Query.hs  Request.hs  Responder.hs  Route.hs  Security.hs
lib/src/Okapi/Parser/Alt/: Body.hs  Headers.hs  Path.hs  Query.hs
lib/src/Okapi/Parser/Ap/: Body.hs  Headers.hs  Path.hs  Query.hs
lib/src/Okapi/Parser/Body/: JSON.hs  Multipart.hs
lib/src/Okapi/Parser/Headers/: Alt.hs  Ap.hs  Operation.hs
lib/src/Okapi/Parser/Query/: Alt.hs  Ap.hs  Operation.hs
lib/src/Okapi/Parser/Responder/: AddHeader.hs
lib/src/Okapi/Req/: Body.hs  Headers.hs  Method.hs  Path.hs  Query.hs
lib/src/Okapi/Res/: Body.hs  Headers.hs  Status.hs
lib/src/Okapi/Response/: Builder.hs
lib/src/Okapi/Script/: AddHeader.hs  Body.hs  Headers.hs  Path.hs  Query.hs  Responder.hs  ResponderHeaders.hs  Security.hs
lib/src/Okapi/Script/Body/: Multipart.hs
lib/src/Okapi/Script/Responder/: AddHeader.hs
lib/src/Okapi/Script/Security/: Secure.hs
lib/src/Okapi/Spec/: Request.hs  Response.hs
lib/src/Okapi/Spec/Request/: Body.hs  Headers.hs  Path.hs  Query.hs  Security.hs
lib/src/Okapi/Spec/Request/Body/: ContentType.hs  Form.hs
lib/src/Okapi/Spec/Request/Security/: Scheme.hs
lib/src/Okapi/Spec/Response/: Headers.hs
lib/swagger-ui-dist/: swagger-ui-bundle.js  swagger-ui-es-bundle.js
lib/test/: Spec.hs
my_hsp_files/: bar.hsp  greeting.hsp
my_hsp_files/bar/: [age].hsp
my_hsp_files/calc/: add.hsp
my_hsp_files/greeting/: [age].hsp  [name].hsp
new/: CHANGELOG.md  new.cabal
new/app/: Main.hs
new/src/: Kind.hs  Okapi.hs  Phantom.hs  Simple.hs
newdocs/: package-lock.json  package.json
old/: TEA.hs  Type.hs
old/Body/: Alternative.hs  Applicative.hs  Operation.hs
old/Headers/: Alternative.hs  Applicative.hs  Operation.hs
old/Path/: Alternative.hs  Applicative.hs
old/Query/: Alternative.hs  Applicative.hs  Operation.hs
old_/Okapi/: App.hs  Headers.hs
src/: Mount.hs  Okapi.hs  Result.hs  Routing.hs  Simple.hs  TH.hs  THTest.hs
src/Okapi/: Application.hs  Applicative.hs  Controller.hs  Endpoint.hs  Error.hs  Event.hs  EventSource.hs  Extractor.hs  Failure.hs  FastParser.hs  Function.hs  HSP.hs  HTTP.hs  Interface.hs  Log.hs  Match.hs  Middleware.hs  Monad.hs  Operator.hs  Params.hs  Parser.hs  Pattern.hs  Patterns.hs  QuasiQuotes.hs  Request.hs  Response.hs  Route.hs  Routes.hs  Server.hs  State.hs  Synonym.hs  Test.hs  Type.hs  Types.hs
src/Old/: Extractor.hs  Monad.hs  Pattern.hs  Result.hs  Scratch.hs
src/Simple/: Query.hs
test/: Infer.hs  Main.hs  OpenApi.hs  Spec.hs
(+173 files in other folders)
