cabal-version:      1.12
name:               okapi
version:            0.2.0.0
license:            BSD3
license-file:       LICENSE
copyright:          2022 Monadic Systems LLC
maintainer:         tech@monadic.systems
author:             Monadic Systems LLC
homepage:           https://github.com/monadicsystems/okapi#readme
bug-reports:        https://github.com/monadicsystems/okapi/issues
synopsis:           A micro web framework based on monadic parsing
description:
    Please see the README on GitHub at <https://github.com/monadicsystems/okapi#readme>

category:           Web
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/monadicsystems/okapi

library
    exposed-modules:  Okapi
    hs-source-dirs:   src
    other-modules:    Paths_okapi
    default-language: Haskell2010
    build-depends:
        aeson >=1.4.7,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        extra,
        http-api-data,
        http-types,
        memory,
        mmorph,
        mtl,
        network,
        parser-combinators,
        text,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets

executable calculator-exe
    main-is:          Main.hs
    hs-source-dirs:   examples/calculator
    other-modules:    Paths_okapi
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aeson >=1.4.7,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        extra,
        http-api-data,
        http-types,
        memory,
        mmorph,
        mtl,
        network,
        okapi,
        parser-combinators,
        text,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets

executable calculator2-exe
    main-is:          Main.hs
    hs-source-dirs:   examples/calculator2
    other-modules:    Paths_okapi
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aeson,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        extra,
        http-api-data,
        http-types,
        memory,
        mmorph,
        mtl,
        network,
        okapi,
        parser-combinators,
        text,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets

executable car-dealership-exe
    main-is:          Main.hs
    hs-source-dirs:   examples/car-dealership
    other-modules:    Paths_okapi
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aeson >=1.4.7,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        extra,
        http-api-data,
        http-types,
        interpolatedstring-perl6,
        memory,
        mmorph,
        mtl,
        network,
        okapi,
        parser-combinators,
        random,
        sqlite-simple,
        text,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets

executable dotodo-exe
    main-is:          Main.hs
    hs-source-dirs:   examples/dotodo
    other-modules:    Paths_okapi
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aeson >=1.4.7,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        extra,
        http-api-data,
        http-types,
        lucid2,
        lucid2-htmx,
        memory,
        mmorph,
        mtl,
        network,
        okapi,
        parser-combinators,
        sqlite-simple,
        text,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets

executable sse-exe
    main-is:          Main.hs
    hs-source-dirs:   examples/sse
    other-modules:    Paths_okapi
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aeson >=1.4.7,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        extra,
        http-api-data,
        http-types,
        memory,
        mmorph,
        mtl,
        network,
        okapi,
        parser-combinators,
        slave-thread,
        text,
        time,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets

executable static-exe
    main-is:          Main.hs
    hs-source-dirs:   examples/static
    other-modules:    Paths_okapi
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aeson >=1.4.7,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        extra,
        http-api-data,
        http-types,
        memory,
        mmorph,
        mtl,
        network,
        okapi,
        parser-combinators,
        text,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets

executable todo-exe
    main-is:          Main.hs
    hs-source-dirs:   examples/todo
    other-modules:    Paths_okapi
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aeson >=1.4.7,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        extra,
        http-api-data,
        http-types,
        memory,
        mmorph,
        mtl,
        network,
        okapi,
        parser-combinators,
        sqlite-simple,
        text,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets

executable todo2-exe
    main-is:          Main.hs
    hs-source-dirs:   examples/todo2
    other-modules:    Paths_okapi
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aeson >=1.4.7,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        extra,
        http-api-data,
        http-types,
        memory,
        mmorph,
        mtl,
        network,
        okapi,
        parser-combinators,
        sqlite-simple,
        text,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets

executable todo3-exe
    main-is:          Main.hs
    hs-source-dirs:   examples/todo3
    other-modules:    Paths_okapi
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aeson >=1.4.7,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        extra,
        http-api-data,
        http-types,
        interpolatedstring-perl6,
        memory,
        mmorph,
        mtl,
        network,
        okapi,
        parser-combinators,
        sqlite-simple,
        text,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets

executable twitter-clone-exe
    main-is:          Main.hs
    hs-source-dirs:   examples/twitter-clone
    other-modules:    Paths_okapi
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aeson >=1.4.7,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        extra,
        http-api-data,
        http-types,
        memory,
        mmorph,
        mtl,
        network,
        okapi,
        parser-combinators,
        rel8,
        text,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets

test-suite okapi-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:    Paths_okapi
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aeson >=1.4.7,
        attoparsec,
        base >=4.7 && <5,
        base64,
        bytestring,
        containers,
        cookie,
        cryptonite,
        doctest-parallel,
        extra,
        http-api-data,
        http-types,
        memory,
        mmorph,
        mtl,
        network,
        okapi,
        parser-combinators,
        text,
        transformers,
        unagi-chan,
        vault,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        warp-tls,
        websockets
