cabal-version: 3.6

name:           okapi
version:        0.2.0.0
synopsis:       A micro web framework based on monadic parsing
description:    Please see the README on GitHub at <https://github.com/monadicsystems/okapi#readme>
category:       Web
homepage:       https://github.com/monadicsystems/okapi#readme
bug-reports:    https://github.com/monadicsystems/okapi/issues
author:         Monadic Systems LLC
maintainer:     tech@monadic.systems
copyright:      2022 Monadic Systems LLC
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/monadicsystems/okapi

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Okapi
        Okapi.Codec
        Okapi.Data
        Okapi.Kind
        Okapi.Mode
        Okapi.OpenApi
        Okapi.Pattern
        Okapi.Req
        Okapi.Req.Body
        Okapi.Req.Headers
        Okapi.Req.Method
        Okapi.Req.Path
        Okapi.Req.Query
        Okapi.Res
        Okapi.Res.Body
        Okapi.Res.Headers
        Okapi.Res.Status
        Okapi.ResAlt
    build-depends:
        base ^>=4.20.0.0,
        aeson,
        bytestring,
        case-insensitive,
        http-types,
        insert-ordered-containers,
        lens,
        openapi3,
        profunctors,
        scientific,
        text,
        time,
        uuid,
        vector,
        wai
    hs-source-dirs:   src
    default-language: GHC2024

test-suite okapi-examples
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   ../test
    build-depends:
        base ^>=4.20.0.0,
        bytestring,
        http-types,
        text,
        okapi
    default-language: GHC2024

test-suite okapi-infer
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Infer.hs
    hs-source-dirs:   ../test
    build-depends:
        base ^>=4.20.0.0,
        bytestring,
        http-types,
        text,
        okapi
    default-language: GHC2024

test-suite okapi-openapi
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          OpenApi.hs
    hs-source-dirs:   ../test
    build-depends:
        base ^>=4.20.0.0,
        aeson,
        bytestring,
        http-types,
        text,
        okapi,
        openapi3
    default-language: GHC2024
