cabal-version:      2.4
name:               new
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Rashad Gover
maintainer:         phantomtype@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: 
        Okapi

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.7 && <5
        , aeson
        , base64
        , binary
        , bytestring
        , case-insensitive
        , containers
        , cookie
        , extra
        , http-api-data
        , http-types
        , natural-transformation
        , network
        , text
        , vault
        , wai
        , wai-extra
        , wai-logger
        , warp
        , parser-combinators
    hs-source-dirs:   src
    default-language: Haskell2010

executable new
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        new

    hs-source-dirs:   app
    default-language: Haskell2010
